my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESYNTAX_old_anon_bank/ESYNTAX_old_anon_bank.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESYNTAX_old_anon_bank.dml:11:6: error ESYNTAX: syntax error at '{'
